src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__tuple_pattern.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Match {
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 15,
                                                                end: 19,
                                                                start_line: 1,
                                                                start_col: 16,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 15,
                                                    end: 19,
                                                    start_line: 1,
                                                    start_col: 16,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 15,
                                            end: 19,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    arms: [
                                        MatchArm {
                                            pattern: Pattern {
                                                kind: Tuple {
                                                    fields: [
                                                        Pattern {
                                                            kind: Ident {
                                                                by_ref: false,
                                                                mutable: false,
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 23,
                                                                        end: 24,
                                                                        start_line: 1,
                                                                        start_col: 24,
                                                                    },
                                                                },
                                                                subpattern: None,
                                                            },
                                                            span: Span {
                                                                start: 23,
                                                                end: 24,
                                                                start_line: 1,
                                                                start_col: 24,
                                                            },
                                                        },
                                                        Pattern {
                                                            kind: Ident {
                                                                by_ref: false,
                                                                mutable: false,
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 26,
                                                                        end: 27,
                                                                        start_line: 1,
                                                                        start_col: 27,
                                                                    },
                                                                },
                                                                subpattern: None,
                                                            },
                                                            span: Span {
                                                                start: 26,
                                                                end: 27,
                                                                start_line: 1,
                                                                start_col: 27,
                                                            },
                                                        },
                                                    ],
                                                    rest_pos: None,
                                                },
                                                span: Span {
                                                    start: 22,
                                                    end: 28,
                                                    start_line: 1,
                                                    start_col: 23,
                                                },
                                            },
                                            guard: None,
                                            body: Expr {
                                                kind: Binary {
                                                    op: Add,
                                                    left: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 32,
                                                                                end: 33,
                                                                                start_line: 1,
                                                                                start_col: 33,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 32,
                                                                    end: 33,
                                                                    start_line: 1,
                                                                    start_col: 33,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 32,
                                                            end: 33,
                                                            start_line: 1,
                                                            start_col: 33,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 4,
                                                                            },
                                                                            span: Span {
                                                                                start: 36,
                                                                                end: 37,
                                                                                start_line: 1,
                                                                                start_col: 37,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 36,
                                                                    end: 37,
                                                                    start_line: 1,
                                                                    start_col: 37,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 36,
                                                            end: 37,
                                                            start_line: 1,
                                                            start_col: 37,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 32,
                                                    end: 37,
                                                    start_line: 1,
                                                    start_col: 33,
                                                },
                                            },
                                            span: Span {
                                                start: 22,
                                                end: 37,
                                                start_line: 1,
                                                start_col: 23,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 39,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 41,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 41,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 41,
        start_line: 1,
        start_col: 1,
    },
}
